# Game

./: .gitignore  CMakeLists.txt
include/: App.hpp  Circle.h  CollisionDetector.hpp  Enemy.hpp  Entity.hpp  Event.h  FileWatcher.h  RenderObject.h  SharedLibrary.h  State.h  precompile.hpp
src/: App.cpp  CollisionDetector.cpp  FileWatcher.cpp  SharedLibrary.h  main.cpp
src/game/: CMakeLists.txt  main.cpp
